[gd_scene load_steps=12 format=3 uid="uid://d03ki3q2f2pvv"]

[ext_resource type="Shader" path="res://hologram.gdshader" id="1_ddxgp"]
[ext_resource type="Script" path="res://Beisiks/main_menu.gd" id="2_wgi7u"]
[ext_resource type="PackedScene" uid="uid://bprig16wnpqoj" path="res://Beisiks/main.tscn" id="3_6fvl3"]
[ext_resource type="PackedScene" uid="uid://cd5ljxotmc6qu" path="res://Beisiks/teksti.tscn" id="4_qqmd2"]
[ext_resource type="Texture2D" uid="uid://bxx1x2dr8iso4" path="res://GFX/titteli.png" id="5_exosn"]
[ext_resource type="AudioStream" uid="uid://bxj31nuq1rmq" path="res://SFX/jourenyintro.ogg" id="6_ce8nr"]
[ext_resource type="Texture2D" uid="uid://cnim1f8tu6378" path="res://GFX/valopimee.png" id="6_lc6x3"]
[ext_resource type="Texture2D" uid="uid://nybesxsw876d" path="res://GFX/valo.png" id="7_3kd20"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_l4tms"]
shader = ExtResource("1_ddxgp")
shader_parameter/lines = 100
shader_parameter/color1 = Color(0.192157, 0.247059, 0, 1)
shader_parameter/color2 = Color(0.462745, 0, 0, 1)
shader_parameter/speed = 0.2
shader_parameter/alpha = 0.38
shader_parameter/noise_amount = 0.14
shader_parameter/effect_factor = 0.22

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_s1hk4"]
texture = ExtResource("6_lc6x3")
texture_margin_top = 8.0
texture_margin_bottom = 8.0
expand_margin_top = 4.0
expand_margin_bottom = 4.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2nupp"]
texture = ExtResource("7_3kd20")
texture_margin_top = 10.0
texture_margin_bottom = 10.0
expand_margin_top = 5.0
expand_margin_bottom = 5.0

[node name="valid_main_menu" type="MarginContainer"]
material = SubResource("ShaderMaterial_l4tms")
offset_right = 1024.0
offset_bottom = 640.0
script = ExtResource("2_wgi7u")
peli = ExtResource("3_6fvl3")
tekstii = ExtResource("4_qqmd2")
txt = "Software used in the project:
Godot 4.1
GIMP, Krita, JWildfire
Ardour, Rosegarden
Hydrogen, Qsynth, Vital
etc (FOSS all the way!)"

[node name="TextureRect" type="TextureRect" parent="."]
use_parent_material = true
layout_mode = 2
texture = ExtResource("5_exosn")

[node name="TextureRect2" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.572549)
layout_mode = 2
texture = ExtResource("5_exosn")

[node name="MarginContainer" type="MarginContainer" parent="."]
use_parent_material = true
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 128
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
use_parent_material = true
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="start" type="Button" parent="MarginContainer/VBoxContainer"]
use_parent_material = true
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_s1hk4")
theme_override_styles/hover = SubResource("StyleBoxTexture_2nupp")
text = "Start journey"

[node name="scredits" type="Button" parent="MarginContainer/VBoxContainer"]
use_parent_material = true
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_s1hk4")
theme_override_styles/hover = SubResource("StyleBoxTexture_2nupp")
text = "Software credits"

[node name="quit" type="Button" parent="MarginContainer/VBoxContainer"]
use_parent_material = true
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxTexture_s1hk4")
theme_override_styles/hover = SubResource("StyleBoxTexture_2nupp")
text = "Quit"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_ce8nr")
autoplay = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/scredits" to="." method="_on_scredits_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/quit" to="." method="_on_quit_pressed"]
